# pathfinder

./: CMakeLists.txt  README.md  adjacencies.cpp  adjacencies.h  binaryExporter.cpp  binaryExporter.h  binaryImporter.cpp  binaryImporter.h  build_emscripten.sh  build_emscripten_worker.sh  db.cpp  db.h  dbUpdates.cpp  dbUpdates.h  download_safes.py  emscripten_toolchain.cmake  encoding.h  exceptions.h  flow.cpp  flow.h  importGraph.cpp  importGraph.h  index.html  index.js  keccak.cpp  keccak.h  main.cpp  package-lock.json  package.json  pathfinder_worker.js  pathfinderd.js  test.js  types.cpp  types.h  webservice.js
.github/workflows/: cmake.yml  edges.yml
emscripten_build/: pathfinder.js
test/: build_db.json  build_db.json_exp.json  empty.json  empty.json_exp.json  simple.json  simple.json_exp.json  test.sh
